<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ecommerce_android_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ecommerce_android_app.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.ecommerce_android_app.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.ecommerce_android_app.OffersFragment"
        android:label="@string/menu_offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.ecommerce_android_app.NewProductsFragment"
        android:label="@string/menu_new_products"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.ecommerce_android_app.MyOrdersFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.ecommerce_android_app.MyCartsFragment"
        android:label="@string/menu_my_carts"
        tools:layout="@layout/fragment_my_carts" />
</navigation>