<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    android:background="@color/white"
    >
    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/auth_bg"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/reg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_reg_title"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_img"
        />
    <EditText
        android:textColor="#888887"
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:layout_marginTop="20dp"
        android:padding="13dp"
        android:hint="@string/auth_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_title"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/email_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/account"
        android:drawablePadding="13dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/auth_email"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/keylog"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg"
        app:layout_constraintWidth_percent=".8" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="14dp"
        android:text="@string/auth_sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/btn_bg_detailed"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_help_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn"
        app:layout_constraintVertical_bias=".1" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_sign_in"
        android:textColor="@color/main"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.1"
        android:scaleX=".5"
        android:scaleY=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>