<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/logOut"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_log_out"
        android:gravity="center"
        android:onClick="logOut"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/auth_log_out"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/baseline_logout_24" />
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="132dp"
        android:src="@mipmap/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/profile_name"
        android:padding="13dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        app:drawableLeftCompat="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintWidth_percent=".8" />
    <TextView
        android:inputType="textEmailAddress"
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/profile_email"
        android:padding="13dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        app:drawableStartCompat="@drawable/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        app:layout_constraintWidth_percent=".8" />
    <TextView
        android:inputType="textPassword"
        android:id="@+id/profile_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/profile_phone"
        android:padding="13dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        app:drawableStartCompat="@drawable/baseline_local_phone_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintWidth_percent=".8" />
    <TextView
        android:id="@+id/profile_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/profile_address"
        android:padding="13dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        app:drawableStartCompat="@drawable/baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_number"
        app:layout_constraintWidth_percent=".8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_detailed"
        android:padding="14dp"
        android:text="@string/profile_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_address"
        app:layout_constraintVertical_bias="0.214" />

</androidx.constraintlayout.widget.ConstraintLayout>