<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/pop_img"
            android:layout_width="280dp"
            android:layout_height="190dp"
            app:riv_corner_radius="14dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_dishes"
            tools:ignore="MissingClass" />
        <TextView
            android:id="@+id/pop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_popular_products"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/pop_des"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/item_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:src="@mipmap/ratingbar"
                android:layout_marginStart="-5dp"/>
            <TextView
                android:id="@+id/pop_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="-14dp"
                android:text="5.0"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/pop_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginRight="7dp"
                android:text="@string/item_discount"
                android:textStyle="bold"
                android:gravity="end" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>