<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageView
            android:id="@+id/rec_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/default_dishes"/>
        <TextView
            android:id="@+id/rec_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="19sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/rec_dec"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/item_description"/>
        <LinearLayout
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="-5dp"
                android:src="@mipmap/ratingbar" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rec_rating"
                android:text="5.0"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="-17dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="86dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/item_price"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/rec_price" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>